tests/paczka1/fuzzy1/65092382.err
Error in line 4: A930 A952 97,8
Error in line 3: t5K1cf5 A946 77,6
Error in line 27: SF5IJ8QxN A6 45,9
Error in line 26: 5qEzLMuDCh A930 48,1
